--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "nahakiole.staruml-php",
-  "title": "PHP",
+  "name": "rootsnase.staruml-php",
+  "title": "PHP 8.1",
   "description": "PHP code generation. At the moment a bit buggy probably. Just open new issues with your behavior and your .mdj file and I'll fix it.",
-  "homepage": "https://github.com/nahakiole/staruml-php",
-  "issues": "https://github.com/nahakiole/staruml-php/issues",
+  "homepage": "https://github.com/rootsnase/staruml-php",
+  "issues": "https://github.com/rootsnase/staruml-php/issues",
   "keywords": ["php"],
-  "version": "0.2.0",
+  "version": "0.2.1",
   "author": {
-    "name": "Robin Glauser",
+    "name": "@rootsnase / Robin Glauser",
     "email": "robin.glauser@gmail.com",
-    "url": "https://github.com/nahakiole"
+    "url": "https://github.com/rootsnase/ || https://github.com/nahakiole"
   },
   "contributors": [
     {
